package com.rms.domain.enums;

/** Mirrors the users.role ENUM exactly - do not reorder without a DB migration. */
public enum Role {
    ADMIN,
    MANAGER,
    WAITER,
    KITCHEN,
    CASHIER
}
